@@ -13,6 +13,8 @@ Bugs fixed in 3.14.02
 [2113261] No longer crashes when opening write-protected database.
 [2102624] Can now change a normal entry into an alias or an alias'
 base entry into an alias of another entry taking its aliases with it.
+[2101656] Incorrect Notes field behaviour when using scroll bars 
+corrected.
 [2100916] Correct colouring of the Dragbar icons after changing
 selected entry.
 [2100429] Handle invalid time field in database gracefully. Thanks to
